# vps-pipeline

./: README.md
dagster_manager/: main.py  pyproject.toml  workspace.yaml
dagster_manager/.tmp_dagster_home_1v_90s1a/history/: runs.db
dagster_manager/.tmp_dagster_home_1v_90s1a/history/runs/: .db  index.db
dagster_manager/.tmp_dagster_home_1v_90s1a/schedules/: schedules.db
hello_world/src/hello_world/: definitions.py  sample_definitions.py
hello_world/src/hello_world/defs/: schedules.py
hello_world/src/hello_world/defs/assets/: print_asset.py
hello_world/src/hello_world/defs/configs/: config.py
hello_world/src/hello_world/defs/jobs/: jobs.py
hello_world/src/hello_world/defs/resources/: notifier.py
metabase_project/: .gitignore  README.md  marimo.py  pyproject.toml
metabase_project/.dg/: telemetry.yaml
metabase_project/src/metabase_project/: definitions.py  test_et.ipynb
metabase_project/src/metabase_project/configs/: config.py
metabase_project/src/metabase_project/defs/assets/: assets.py
metabase_project/src/metabase_project/defs/jobs/: jobs.py
metabase_project/src/metabase_project/defs/resources/: client.py  email.py  filter.py  notifier.py
